# nilAI

./: .dockerignore  .env.ci  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.dev.macos.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.kata.yml  docker-compose.prod.yml  docker-compose.testnet.dev.yml  docker-compose.testnet.prod.yml  docker-compose.testnet.yml  docker-compose.v2.dev.yml  docker-compose.v2.yml  docker-compose.yml  gunicorn.conf.py  gunicorn.config.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml
caddy/: Caddyfile  Caddyfile.dev  Caddyfile.example  Caddyfile.http  Caddyfile.testnet
db/: README.md
docker/: Dockerfile  README.md  api.Dockerfile  api.standalone.Dockerfile  attestation.Dockerfile  audio.Dockerfile  caddy.Dockerfile  grafana.Dockerfile  lmstudio-announcer.Dockerfile  model.Dockerfile  prometheus.Dockerfile  verifier.Dockerfile  vllm.Dockerfile
docker/compose/: docker-compose-whisperx.yml  docker-compose.audio-gpu.yml  docker-compose.deepseek-14b-gpu.yml  docker-compose.dolphin-8b-gpu.yml  docker-compose.gemma-27b-gpu.yml  docker-compose.gemma-3-27b-cpu.yml  docker-compose.gemma-3-27b-gpu.yml  docker-compose.gemma-4b-gpu.ci.yml  docker-compose.gemma-4b-gpu.yml  docker-compose.gpt-120b-gpu.yml  docker-compose.gpt-20b-gpu.ci.yml  docker-compose.gpt-20b-gpu.yml  docker-compose.llama-1b-cpu.yml  docker-compose.llama-1b-gpu.ci.yml  docker-compose.llama-1b-gpu.yml  docker-compose.llama-3b-gpu.prod.yml  docker-compose.llama-3b-gpu.yml  docker-compose.llama-70b-gpu.yml  docker-compose.llama-8b-gpu.yml  docker-compose.lmstudio.yml  (+12 more)
gpuverifier-api/: .dockerignore  gunicorn.conf.py  launch.sh  pyproject.toml
gpuverifier-api/src/gpuverifier_api/: __main__.py  app.py
nilai/: __init__.py  __main__.py  app.py  auth.py  crypto.py  cryptography.py  db.py  main.py  model.py  server.py  state.py
nilai-api/: gunicorn.conf.py  launch.sh  private_key.key  pyproject.toml
nilai-api/alembic/: env.py
nilai-api/alembic/versions/: 597f5c4be67e_feat_websearch_rate_limits.py  9ddf28cf6b6f_feat_new_user_config_and_web_rate_limits.py  b9642f45db1d_fix_changed_to_timestamps_with_timezone.py  ca76e3ebe6ee_fix_remove_mail_and_adjust_field_lengths.py  da89d3230653_create_initial_set_of_tables.py
nilai-api/examples/: users.py
nilai-api/src/nilai_api/: .vault.py.swp  __main__.py  app.py  auth.py  credit.py  crypto.py  db.py  pricing_service.py  rate_limiting.py  state.py  vault.py
nilai-api/src/nilai_api/attestation/: __init__.py
nilai-api/src/nilai_api/auth/: __init__.py  common.py  jwt.py  nuc.py  strategies.py
nilai-api/src/nilai_api/commands/: add_user.py
nilai-api/src/nilai_api/config/: __init__.py  __main__.py  auth.py  config-a779.yaml  config-e176.yaml  config-f910.yaml  config-microservices.yml  config.yaml  database.py  environment.py  mainnet.py  mainnet.yaml  nildb.py  pricing.py  rate_limiting.py  testnet.py  testnet.yaml  tools.py  utils.py  web_search.py
nilai-api/src/nilai_api/db/: __init__.py  logs.py  users.py
nilai-api/src/nilai_api/handlers/: blindrag.py  code_execution.py  image_support.py  nilrag.py  web_search.py  web_search_tool.py
nilai-api/src/nilai_api/handlers/nildb/: api_model.py  config.py  handler.py
nilai-api/src/nilai_api/handlers/tools/: code_execution.py  responses_tool_router.py  router.py  tool_router.py
nilai-api/src/nilai_api/routers/: .private.py.swp  chat.py  common_rate_limit.py  internal.py  pricing.py  private.py  public.py  responses.py
nilai-api/src/nilai_api/routers/endpoints/: chat.py  responses.py
nilai-api/src/nilai_api/sev/: .gitignore  README.md  sev.py
nilai-api/src/nilai_api/tdx/: README.md  main.go
nilai-api/src/nilai_api/utils/: content_extractor.py
nilai-attestation/: gunicorn.conf.py  pyproject.toml
nilai-attestation/src/nilai_attestation/: app.py
nilai-attestation/src/nilai_attestation/attestation/: __init__.py
nilai-attestation/src/nilai_attestation/attestation/nvtrust/: __init__.py  nv_attester.py  nv_verifier.py
nilai-attestation/src/nilai_attestation/attestation/sev/: .gitignore  README.md  go.mod  main.go  sev.py
nilai-attestation/src/nilai_attestation/attestation/tdx/: go.mod  go.sum
nilai-attestation/src/nilai_attestation/routers/: private.py  public.py
nilai-attestation/tests/sev/: test_sev.py
nilai-audio/: pyproject.toml  run.sh
nilai-audio/src/nilai_audio/: __init__.py  main.py  summarization.py  transcription.py
nilai-auth/: README.md
nilai-auth/nilai-auth-client/: README.md  pyproject.toml
nilai-auth/nilai-auth-client/examples/: test.ipynb  tutorial.ipynb
nilai-auth/nilai-auth-client/src/nilai_auth_client/: __init__.py  main.py
nilai-auth/nilai-auth-server/: README.md  gunicorn.conf.py  pyproject.toml
nilai-auth/nilai-auth-server/src/nilai_auth_server/: __init__.py  app.py  config.py  test copy.ipynb
nilai-auth/nuc-helpers/: nuc_inspector.py  nuc_web_inspector.py  pyproject.toml
nilai-auth/nuc-helpers/src/nuc_helpers/: __init__.py  helpers.py  main.py  nildb_document.py  usage.py
nilai-models/: README.md  gunicorn.conf.py  pyproject.toml  run.sh
nilai-models/src/nilai_models/: daemon.py  lmstudio_announcer.py  model.py
nilai-models/src/nilai_models/models/: llama_model.py
nilai-models/src/nilai_models/models/llama_1b_cpu/: __init__.py  llama_1b_cpu.py
nilai-models/src/nilai_models/models/llama_1b_gpu/: __init__.py  llama_1b_gpu.py
nilai-models/src/nilai_models/models/llama_8b_cpu/: __init__.py  llama_8b_cpu.py
nilai-models/src/nilai_models/models/llama_8b_gpu/: __init__.py  llama_8b_gpu.py
nilai-models/src/nilai_models/models/secret_llama_1b_cpu/: __init__.py  secret_llama_1b_cpu.py
scripts/: README.md  docker-composed.sh  docker-composer.py  docker-composer.sh  nilcc-agent-launch.sh  postgres-init.sh  wait_for_ci_services.sh
sev/: go.sum  libsevguest.h  main.go  sev.py
tdx/: go.mod  main.go
tests/: __init__.py  model_execution_0.py  model_execution_1.py  model_execution_2.py  model_execution_3.py  test_cryptography.py  test_db.py
(+92 files in other folders)
