[project]
name = "nilai"
version = "0.1.0"
description = ""
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "cryptography>=43.0.3",
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "llama-cpp-python>=0.3.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["nilai"] }
