[project]
name = "nilai"
version = "0.1.0"
description = ""
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nilai-api",
    "nilai-common",
    "nilai-models",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["nilai"] }

[tool.uv.workspace]
members = ["nilai-models", "nilai-api", "packages/nilai-common"]

[tool.uv.sources]
nilai-common = { workspace = true }
nilai-api = { workspace = true }
nilai-models = { workspace = true }
