[project]
name = "nilai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" },
    { name = "Manuel Santos", email = "manuel.santos@nillion.com" },
    { name = "Dimitris Mouris", email = "dimitris@nillion.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "nilai-common",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "httpx>=0.27.2",
    "nilrag>=0.1.11",
    "openai>=1.99.2",
    "prometheus_fastapi_instrumentator>=7.0.2",
    "asyncpg>=0.30.0",
    "redis>=6.4.0",
    "web3>=7.8.0",
    "click>=8.1.8",
    "nuc-helpers",
    "nuc>=0.1.0",
    "pyyaml>=6.0.1",
    "trafilatura>=1.7.0",
    "secretvaults",
    "pydantic>=2.0.0",
    "ecdsa>=0.19.0",
    "secp256k1>=0.14.0",
    "hexbytes>=1.2.0",
    "eth-account>=0.13.0",
    "sentence-transformers>=5.1.1",
    "e2b-code-interpreter>=1.0.3",
    "nilauth-credit-middleware==0.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilai-common = { workspace = true }
nuc-helpers = { workspace = true }
secretvaults = { git = "https://github.com/jcabrero/secretvaults-py", rev = "main" }
