[project]
name = "nilai-attestation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "nilai-common",
    "nv-attestation-sdk==2.4.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilai-common = { path = "../packages/nilai-common", editable = true }
