[project]
name = "nilai-audio"
version = "0.1.0"
description = "WhisperX service with Nilai"
readme = "README.md"
authors = [
    { name = "blefo", email = "lefort.baptiste@yahoo.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "whisperx==3.3.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart",
    "httpx>=0.27.0",
    "nilai-common",
    "pyannote.audio==3.3.2",
    "nilai-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilai-common = { workspace = true }
nilai-models = { workspace = true }
