[project]
name = "nilai-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "llama-cpp-python>=0.3.2",
    "nilai-common",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilai-common = { workspace = true }
