[project]
name = "nuc-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cosmpy==0.9.2",
    "pydantic>=2.11.2",
    "secp256k1>=0.14.0",
    "httpx>=0.28.1",
    "nuc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nuc = { git = "https://github.com/NillionNetwork/nuc-py.git", tag = "54c7171e0e30fc9a68ba9e307bb6e92a0690f4d8" }
