[project]
name = "nuc-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cosmpy==0.9.2",
    "pydantic>=2.11.2",
    "secp256k1>=0.14.0",
    "httpx>=0.28.1",
    "nuc>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
